--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     </head>
     <body>
         <header>
-            <h1><i>приправи</i></h1>
+            <h1><i>Приправи</i></h1>
         </header>
         <main>
             <nav>
-                <a class="a_1" href="https://smailey123.github.io/mirydia.specie2/">приправи</a>
-                <a class="a_1" href="https://smailey123.github.io/mirydia.prukras.4/"f>цукрові прикраси</a>
-                <a class="a_1" href="https://smailey123.github.io/mirydia.posupca.5/">кондитерская посипка</a>
-                <a class="a_1" href>продукція на Великдень</a>
+                <a class="a_1" href="https://smailey123.github.io/mirydia.specie2/">Приправи</a>
+                <a class="a_1" href="https://smailey123.github.io/mirydia.prukras.4/">Цукрові прикраси</a>
+                <a class="a_1" href="https://smailey123.github.io/mirydia.posupca.5/">Кондитерская посипка</a>
+                <a class="a_1" href>Продукція на Великдень</a>
             </nav>
             <section class="osnova_sec">
                 <article class="osnova_arc">
@@ -31,12 +31,12 @@
             <section class="vubir_sec">
                 <article class="vubir_art">
                     <img class="img_art" src="https://calorizator.ru/sites/default/files/imagecache/product_512/product/kotanyi-1.jpg">
-                    <h3 class="h3_art">Итальянские травы</h3>
+                    <h3 class="h3_art">Італійські трави</h3>
                     <p class="p_art">ціна</p>
                 </article>
                 <article class="vubir_art">
                     <img class="img_art" src="https://images.prom.ua/1889515457_priprava-dlya-ryby.jpg">
-                    <h3 class="h3_art">приправы для рыбы</h3>
+                    <h3 class="h3_art">Приправи для риби</h3>
                     <p class="p_art">ціна</p>
                 </article>
             </section>
@@ -46,10 +46,10 @@
                 <article class="footer_article">
                 <h2 class="footer_h2">Каталог продукції:</h2>
                 <ul>
-                    <li>приправи</li>
-                    <li>цукрови прикраси</li>
-                    <li>кондитерская посипка</li>
-                    <li>продукція на Великдень</li>
+                    <li>Приправи</li>
+                    <li>Цукрови прикраси</li>
+                    <li>Кондитерская посипка</li>
+                    <li>Продукція на Великдень</li>
                 </ul>
                 </article>
                 <article class="footer2_article">
