--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a class="a_1" href="https://smailey123.github.io/mirydia.specie2/">Приправи</a>
                 <a class="a_1" href="https://smailey123.github.io/mirydia.prukras.4/">Цукрові прикраси</a>
                 <a class="a_1" href="https://smailey123.github.io/mirydia.posupca.5/">Кондитерская посипка</a>
-                <a class="a_1" href>Продукція на Великдень</a>
+                <a class="a_1" href="https://smailey123.github.io/mirydia.pasxa.6/">Продукція на Великдень</a>
             </nav>
             <section class="osnova_sec">
                 <article class="osnova_arc">
@@ -31,12 +31,12 @@
             <section class="vubir_sec">
                 <article class="vubir_art">
                     <img class="img_art" src="https://calorizator.ru/sites/default/files/imagecache/product_512/product/kotanyi-1.jpg">
-                    <h3 class="h3_art">Італійські трави</h3>
+                    <a class="h3_art" href=" https://smailey123.github.io/mirydia.prod.spece3/">Італійські трави</a>
                     <p class="p_art">ціна</p>
                 </article>
                 <article class="vubir_art">
                     <img class="img_art" src="https://images.prom.ua/1889515457_priprava-dlya-ryby.jpg">
-                    <h3 class="h3_art">Приправи для риби</h3>
+                    <a class="h3_art"href="">Приправи для риби</a>
                     <p class="p_art">ціна</p>
                 </article>
             </section>
